tests/NormalTests/paczka1/fuzzy1/23515447.err
Error in line 1: sOpRkct2i S997 51,9
Error in line 3: S224 S997 99,4
Error in line 7: EOln S645 49,37
Error in line 4: EOln S224 15,6
Error in line 2: sOpRkct2i S224 69,1
Error in line 9: EOln S645 154,1
Error in line 27: L22tjU S653 47,2
